--- a/src/components/organisms/post/Post.module.scss
+++ b/src/components/organisms/post/Post.module.scss
@@ -8,11 +8,25 @@
   border-radius: 0.5rem;
 
   .postForm {
+    
     fieldset {
       padding: 0;
       border: none;
+    .postInput, .contentArea {
+        color: var(--text-color-default-brown);
+        transition: ease-in-out 0.1s;
+        height: 2.2rem;
+        &:focus {
+          color: var(--text-color-default-white);
+          border: solid 0.1rem var(--outline-color);
+          background: var(--input-bg-focus);
+        }
     }
-    .labelText {
+
+    .postInput {
+      height: 2.2rem;
+    }
+    .postLabel {
         text-align: left;
     }
     
@@ -21,6 +35,7 @@
       scrollbar-color: var(--scrollbar-color-thumb) var(--scrollbar-color-bg);
     }
   }
+}
 
   .btnContainer {
     @include flex-layout($justify: space-between);
